copy used names to other doc, not only referencing sheet; tdf#56518

Change-Id: I434663a2ffe9b0565cabcf210c643ec57c7ba07b